--- a/CatCoreTests/CatCoreTests.csproj
+++ b/CatCoreTests/CatCoreTests.csproj
@@ -41,6 +41,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cat, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\CatCore\bin\Release\Cat.dll</HintPath>
+    </Reference>
     <Reference Include="Result">
       <HintPath>..\..\Result\Result\bin\Release\netstandard2.0\Result.dll</HintPath>
     </Reference>
@@ -60,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MachineSerialPrefixTests.cs" />
     <Compile Include="PartNumberTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -68,12 +73,6 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CatCore\CatCore.csproj">
-      <Project>{1550CDE4-484A-4A2E-8705-B8C5236D5D60}</Project>
-      <Name>CatCore</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
