--- a/CatCoreTests/CatCoreTests.csproj
+++ b/CatCoreTests/CatCoreTests.csproj
@@ -41,11 +41,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cat, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Option, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\CatCore\bin\Release\Cat.dll</HintPath>
+      <HintPath>..\..\Option\Option\bin\Release\netstandard2.0\Option.dll</HintPath>
     </Reference>
-    <Reference Include="Result">
+    <Reference Include="Result, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Result\Result\bin\Release\netstandard2.0\Result.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -64,15 +65,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SisGroupSerializationTests.cs" />
     <Compile Include="MachineSerialPrefixTests.cs" />
     <Compile Include="PartNumberTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DiagramPositionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CatCore\CatCore.csproj">
+      <Project>{1550CDE4-484A-4A2E-8705-B8C5236D5D60}</Project>
+      <Name>CatCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
